- Fix for Menu not showing images on mobile

--- a/src/app/Components/Menu/Menu.module.scss
+++ b/src/app/Components/Menu/Menu.module.scss
@@ -24,13 +24,9 @@
 
         .image {
             grid-area: image;
-            display: flex;
+            object-fit: cover;
+            width: 100%;
             height: 100%;
-            max-height: 90px;
-            img {
-                object-fit: cover;
-                height: 100%;
-            }
         }
 
         .title {
